# qu-robot

./: .gitmodules  .prettierrc.json  Cargo.toml  LICENSE  README.md  build.rs
src/: ann.rs  encoder.rs  frozen_lake.rs  grid_world.rs  ideal_api.rs  main.rs  neuron.rs  scheduler.rs  ui-resources.gresource.xml  ui.rs
src/gl/: cube.rs  line.rs  main.rs  modern_line.rs  neuron_shape.rs  renderer.rs  simple_line.rs
src/gtk/: window.ui
src/gtk/window/: imp.rs
src/lib/: lib.rs  neuron.rs  scheduler.rs
src/web/: main.rs
src/window/: imp.rs
