[package]
name = "qu-robot"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[[bin]]
name = "gl"
path = "src/gl/main.rs"

[[bin]]
name = "qu"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4", features = ["compress-brotli", "macros"], default-features = false }
glutin = "0.31.3"
glutin-winit = "0.4.2"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"], optional = true, defaul_features = false }
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.5"
rand = "0.8.5"
raw-window-handle = "0.5"
rsrl = "0.8.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
takeable-option = "0.5.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
winit = { version = "0.29", default-features = false, features = ["rwh_05"] }

[build-dependencies]
glib-build-tools = "0.18.0"
gl_generator = "0.5.0"

[features]
native_ui = ["gtk"]
